added veno-box images

--- a/Sandbox/Sandbox/Sandbox.csproj
+++ b/Sandbox/Sandbox/Sandbox.csproj
@@ -250,6 +250,7 @@
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="favicon.ico" />
+    <Content Include="featured-single.html" />
     <Content Include="fonts\fonts.css" />
     <Content Include="Global.asax" />
     <Content Include="bootstrap\css\bootstrap-theme.css.map" />
@@ -261,12 +262,30 @@
     <Content Include="Images\bxslider\next.png" />
     <Content Include="Images\bxslider\prev%402x.png" />
     <Content Include="Images\bxslider\prev.png" />
+    <Content Include="Images\bx_loader.gif" />
+    <Content Include="Images\drag%402x.png" />
+    <Content Include="Images\drag.png" />
     <Content Include="Images\favicon\favicon.ico" />
     <Content Include="Images\favicon\favicon.png" />
     <Content Include="Images\loader.gif" />
     <Content Include="Images\logo.png" />
+    <Content Include="Images\scribbles\scrib-01%402x.jpg" />
+    <Content Include="Images\scribbles\scrib-01.jpg" />
+    <Content Include="Images\scribbles\scrib-02%402x.jpg" />
+    <Content Include="Images\scribbles\scrib-02.jpg" />
+    <Content Include="Images\scribbles\scrib-03%402x.jpg" />
+    <Content Include="Images\scribbles\scrib-03.jpg" />
     <Content Include="Images\side-logo%402x.png" />
     <Content Include="Images\side-logo.png" />
+    <Content Include="Images\venobox\close.gif" />
+    <Content Include="Images\venobox\next.gif" />
+    <Content Include="Images\venobox\preload-circle.png" />
+    <Content Include="Images\venobox\preload-dots.png" />
+    <Content Include="Images\venobox\preload-ios.png" />
+    <Content Include="Images\venobox\preload-quads.png" />
+    <Content Include="Images\venobox\prev.gif" />
+    <Content Include="Images\view%402x.png" />
+    <Content Include="Images\view.png" />
     <Content Include="Images\zoom%402x.png" />
     <Content Include="Images\zoom.png" />
     <Content Include="less\color.less" />
