--- a/Sandbox/Sandbox/Sandbox.csproj
+++ b/Sandbox/Sandbox/Sandbox.csproj
@@ -271,8 +271,28 @@
     <Content Include="Images\drag.png" />
     <Content Include="Images\favicon\favicon.ico" />
     <Content Include="Images\favicon\favicon.png" />
+    <Content Include="Images\kidsrings\kring-01%402x.jpg" />
+    <Content Include="Images\kidsrings\kring-01.jpg" />
+    <Content Include="Images\kidsrings\kring-02%402x.jpg" />
+    <Content Include="Images\kidsrings\kring-02.jpg" />
+    <Content Include="Images\kidsrings\kring-03%402x.jpg" />
+    <Content Include="Images\kidsrings\kring-03.jpg" />
+    <Content Include="Images\kidsrings\kring-04%402x.jpg" />
+    <Content Include="Images\kidsrings\kring-04.jpg" />
+    <Content Include="Images\kidsrings\kring-05%402x.jpg" />
+    <Content Include="Images\kidsrings\kring-05.jpg" />
     <Content Include="Images\loader.gif" />
     <Content Include="Images\logo.png" />
+    <Content Include="Images\motherload\motherload-01%402x.jpg" />
+    <Content Include="Images\motherload\motherload-01.jpg" />
+    <Content Include="Images\motherload\motherload-02%402x.jpg" />
+    <Content Include="Images\motherload\motherload-02.jpg" />
+    <Content Include="Images\motherload\motherload-03%402x.jpg" />
+    <Content Include="Images\motherload\motherload-03.jpg" />
+    <Content Include="Images\motherload\motherload-04%402x.jpg" />
+    <Content Include="Images\motherload\motherload-04.jpg" />
+    <Content Include="Images\motherload\motherload-05%402x.jpg" />
+    <Content Include="Images\motherload\motherload-05.jpg" />
     <Content Include="Images\scribbles\scrib-01%402x.jpg" />
     <Content Include="Images\scribbles\scrib-01.jpg" />
     <Content Include="Images\scribbles\scrib-02%402x.jpg" />
