--- a/Sandbox/Sandbox/Sandbox.csproj
+++ b/Sandbox/Sandbox/Sandbox.csproj
@@ -262,60 +262,60 @@
     <Content Include="bootstrap\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="bootstrap\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="bootstrap\fonts\glyphicons-halflings-regular.woff" />
-    <Content Include="Images\bxslider\next%402x.png" />
-    <Content Include="Images\bxslider\next.png" />
-    <Content Include="Images\bxslider\prev%402x.png" />
-    <Content Include="Images\bxslider\prev.png" />
-    <Content Include="Images\bx_loader.gif" />
-    <Content Include="Images\drag%402x.png" />
-    <Content Include="Images\drag.png" />
-    <Content Include="Images\favicon\favicon.ico" />
-    <Content Include="Images\favicon\favicon.png" />
-    <Content Include="Images\kidsrings\kring-01%402x.jpg" />
-    <Content Include="Images\kidsrings\kring-01.jpg" />
-    <Content Include="Images\kidsrings\kring-02%402x.jpg" />
-    <Content Include="Images\kidsrings\kring-02.jpg" />
-    <Content Include="Images\kidsrings\kring-03%402x.jpg" />
-    <Content Include="Images\kidsrings\kring-03.jpg" />
-    <Content Include="Images\kidsrings\kring-04%402x.jpg" />
-    <Content Include="Images\kidsrings\kring-04.jpg" />
-    <Content Include="Images\kidsrings\kring-05%402x.jpg" />
-    <Content Include="Images\kidsrings\kring-05.jpg" />
-    <Content Include="Images\loader.gif" />
-    <Content Include="Images\logo.png" />
-    <Content Include="Images\motherload\motherload-01%402x.jpg" />
-    <Content Include="Images\motherload\motherload-01.jpg" />
-    <Content Include="Images\motherload\motherload-02%402x.jpg" />
-    <Content Include="Images\motherload\motherload-02.jpg" />
-    <Content Include="Images\motherload\motherload-03%402x.jpg" />
-    <Content Include="Images\motherload\motherload-03.jpg" />
-    <Content Include="Images\motherload\motherload-04%402x.jpg" />
-    <Content Include="Images\motherload\motherload-04.jpg" />
-    <Content Include="Images\motherload\motherload-05%402x.jpg" />
-    <Content Include="Images\motherload\motherload-05.jpg" />
-    <Content Include="Images\scribbles\scrib-01%402x.jpg" />
-    <Content Include="Images\scribbles\scrib-01.jpg" />
-    <Content Include="Images\scribbles\scrib-02%402x.jpg" />
-    <Content Include="Images\scribbles\scrib-02.jpg" />
-    <Content Include="Images\scribbles\scrib-03%402x.jpg" />
-    <Content Include="Images\scribbles\scrib-03.jpg" />
-    <Content Include="Images\side-logo%402x.png" />
-    <Content Include="Images\side-logo.png" />
-    <Content Include="Images\venobox\close.gif" />
-    <Content Include="Images\venobox\next.gif" />
-    <Content Include="Images\venobox\preload-circle.png" />
-    <Content Include="Images\venobox\preload-dots.png" />
-    <Content Include="Images\venobox\preload-ios.png" />
-    <Content Include="Images\venobox\preload-quads.png" />
-    <Content Include="Images\venobox\prev.gif" />
-    <Content Include="Images\view%402x.png" />
-    <Content Include="Images\view.png" />
-    <Content Include="Images\zoom%402x.png" />
-    <Content Include="Images\zoom.png" />
+    <Content Include="images\bxslider\next%402x.png" />
+    <Content Include="images\bxslider\next.png" />
+    <Content Include="images\bxslider\prev%402x.png" />
+    <Content Include="images\bxslider\prev.png" />
+    <Content Include="images\bx_loader.gif" />
+    <Content Include="images\drag%402x.png" />
+    <Content Include="images\drag.png" />
+    <Content Include="images\favicon\favicon.ico" />
+    <Content Include="images\favicon\favicon.png" />
+    <Content Include="images\kidsrings\kring-01%402x.jpg" />
+    <Content Include="images\kidsrings\kring-01.jpg" />
+    <Content Include="images\kidsrings\kring-02%402x.jpg" />
+    <Content Include="images\kidsrings\kring-02.jpg" />
+    <Content Include="images\kidsrings\kring-03%402x.jpg" />
+    <Content Include="images\kidsrings\kring-03.jpg" />
+    <Content Include="images\kidsrings\kring-04%402x.jpg" />
+    <Content Include="images\kidsrings\kring-04.jpg" />
+    <Content Include="images\kidsrings\kring-05%402x.jpg" />
+    <Content Include="images\kidsrings\kring-05.jpg" />
+    <Content Include="images\loader.gif" />
+    <Content Include="images\logo.png" />
+    <Content Include="images\motherload\motherload-01%402x.jpg" />
+    <Content Include="images\motherload\motherload-01.jpg" />
+    <Content Include="images\motherload\motherload-02%402x.jpg" />
+    <Content Include="images\motherload\motherload-02.jpg" />
+    <Content Include="images\motherload\motherload-03%402x.jpg" />
+    <Content Include="images\motherload\motherload-03.jpg" />
+    <Content Include="images\motherload\motherload-04%402x.jpg" />
+    <Content Include="images\motherload\motherload-04.jpg" />
+    <Content Include="images\motherload\motherload-05%402x.jpg" />
+    <Content Include="images\motherload\motherload-05.jpg" />
+    <Content Include="images\scribbles\scrib-01%402x.jpg" />
+    <Content Include="images\scribbles\scrib-01.jpg" />
+    <Content Include="images\scribbles\scrib-02%402x.jpg" />
+    <Content Include="images\scribbles\scrib-02.jpg" />
+    <Content Include="images\scribbles\scrib-03%402x.jpg" />
+    <Content Include="images\scribbles\scrib-03.jpg" />
+    <Content Include="images\side-logo%402x.png" />
+    <Content Include="images\side-logo.png" />
+    <Content Include="images\venobox\close.gif" />
+    <Content Include="images\venobox\next.gif" />
+    <Content Include="images\venobox\preload-circle.png" />
+    <Content Include="images\venobox\preload-dots.png" />
+    <Content Include="images\venobox\preload-ios.png" />
+    <Content Include="images\venobox\preload-quads.png" />
+    <Content Include="images\venobox\prev.gif" />
+    <Content Include="images\view%402x.png" />
+    <Content Include="images\view.png" />
+    <Content Include="images\zoom%402x.png" />
+    <Content Include="images\zoom.png" />
     <Content Include="less\color.less" />
     <Content Include="less\fonts.less" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
-    <Content Include="index.html" />
+    <Content Include="testindex.html" />
     <Content Include="javascripts\custom\coverflow-init.js" />
     <Content Include="javascripts\custom\equalheights-init.js" />
     <Content Include="javascripts\custom\featured-init.js" />
@@ -428,11 +428,31 @@
     <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
     <Content Include="Views\Web.config" />
     <Content Include="twitter\2a16116a4467cfccff2e6ed13e372dbc.json" />
+    <Content Include="Views\Home\About.cshtml" />
+    <Content Include="Views\Home\Contact.cshtml" />
+    <Content Include="Views\Home\KidsRings.cshtml">
+      <SubType>Code</SubType>
+    </Content>
+    <Content Include="Views\Home\Index.cshtml">
+      <SubType>Code</SubType>
+    </Content>
+    <Content Include="Views\Home\Scribbles.cshtml">
+      <SubType>Code</SubType>
+    </Content>
+    <Content Include="Views\Home\TheMotherLoadProject.cshtml">
+      <SubType>Code</SubType>
+    </Content>
+    <Content Include="Views\Shared\_Layout.cshtml">
+      <SubType>Code</SubType>
+    </Content>
+    <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Shared\Error.cshtml">
+      <SubType>Code</SubType>
+    </Content>
+    <Content Include="Views\Shared\_LoginPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Home\" />
-    <Folder Include="Views\Shared\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
