added logo, black color change

--- a/Sandbox/Sandbox/Sandbox.csproj
+++ b/Sandbox/Sandbox/Sandbox.csproj
@@ -302,6 +302,8 @@
     <Content Include="images\scribbles\scrib-03.jpg" />
     <Content Include="images\side-logo%402x.png" />
     <Content Include="images\side-logo.png" />
+    <Content Include="images\social\01%402x.png" />
+    <Content Include="images\social\01.png" />
     <Content Include="images\venobox\close.gif" />
     <Content Include="images\venobox\next.gif" />
     <Content Include="images\venobox\preload-circle.png" />
@@ -316,6 +318,7 @@
     <Content Include="less\color.less" />
     <Content Include="less\fonts.less" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
+    <Content Include="less\less-2.0.0.min.js" />
     <Content Include="testindex.html" />
     <Content Include="javascripts\custom\coverflow-init.js" />
     <Content Include="javascripts\custom\equalheights-init.js" />
