change control color; zoom

--- a/Sandbox/Sandbox/Sandbox.csproj
+++ b/Sandbox/Sandbox/Sandbox.csproj
@@ -263,6 +263,8 @@
     <Content Include="bootstrap\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="bootstrap\fonts\glyphicons-halflings-regular.woff" />
     <Content Include="images\about\profile%402x.jpg" />
+    <Content Include="images\about\profile-01%402x.jpg" />
+    <Content Include="images\about\profile-01.jpg" />
     <Content Include="images\about\profile.jpg" />
     <Content Include="images\brood\brood-01%402x.jpg" />
     <Content Include="images\brood\brood-01.jpg" />
