--- a/Sandbox/Sandbox/Sandbox.csproj
+++ b/Sandbox/Sandbox/Sandbox.csproj
@@ -268,6 +268,12 @@
     <Content Include="images\about\profile-01%402x.jpg" />
     <Content Include="images\about\profile-01.jpg" />
     <Content Include="images\about\profile.jpg" />
+    <Content Include="images\boilingover\boil-01%402x.jpg" />
+    <Content Include="images\boilingover\boil-01.jpg" />
+    <Content Include="images\boilingover\boil-02%402x.jpg" />
+    <Content Include="images\boilingover\boil-02.jpg" />
+    <Content Include="images\boilingover\boil-03%402x.jpg" />
+    <Content Include="images\boilingover\boil-03.jpg" />
     <Content Include="images\brood\brood-01%402x.jpg" />
     <Content Include="images\brood\brood-01.jpg" />
     <Content Include="images\brood\brood-02%402x.jpg" />
@@ -291,6 +297,12 @@
     <Content Include="images\bxslider\prev%402x.png" />
     <Content Include="images\bxslider\prev.png" />
     <Content Include="images\bx_loader.gif" />
+    <Content Include="images\crack\crack-01%402x.jpg" />
+    <Content Include="images\crack\crack-01.jpg" />
+    <Content Include="images\crack\crack-02%402x.jpg" />
+    <Content Include="images\crack\crack-02.jpg" />
+    <Content Include="images\crack\crack-03%402x.jpg" />
+    <Content Include="images\crack\crack-03.jpg" />
     <Content Include="images\drag%402x.png" />
     <Content Include="images\drag.png" />
     <Content Include="images\favicon\favicon.ico" />
@@ -349,6 +361,12 @@
     <Content Include="images\resinballs\resinballs-06.jpg" />
     <Content Include="images\resinballs\resinballs-07%402x.jpg" />
     <Content Include="images\resinballs\resinballs-07.jpg" />
+    <Content Include="images\roachstudy\roach-01%402x.jpg" />
+    <Content Include="images\roachstudy\roach-01.jpg" />
+    <Content Include="images\roachstudy\roach-02%402x.jpg" />
+    <Content Include="images\roachstudy\roach-02.jpg" />
+    <Content Include="images\roachstudy\roach-03%402x.jpg" />
+    <Content Include="images\roachstudy\roach-03.jpg" />
     <Content Include="images\scribbles\scrib-01%402x.jpg" />
     <Content Include="images\scribbles\scrib-01.jpg" />
     <Content Include="images\scribbles\scrib-02%402x.jpg" />
@@ -512,12 +530,12 @@
     <Content Include="Views\Home\Brood.cshtml" />
     <Content Include="Views\Home\Bulge.cshtml" />
     <Content Include="Views\Home\Bump.cshtml" />
+    <Content Include="Views\Home\BolingOver.cshtml" />
+    <Content Include="Views\Home\Crack.cshtml" />
+    <Content Include="Views\Home\RoachStudy.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="images\boilingover\" />
-    <Folder Include="images\crack\" />
-    <Folder Include="images\roachstudy\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
