--- a/Sandbox/Sandbox/Sandbox.csproj
+++ b/Sandbox/Sandbox/Sandbox.csproj
@@ -297,6 +297,40 @@
     <Content Include="images\bxslider\prev%402x.png" />
     <Content Include="images\bxslider\prev.png" />
     <Content Include="images\bx_loader.gif" />
+    <Content Include="images\cracks\cracks-01%402x.jpg" />
+    <Content Include="images\cracks\cracks-01.jpg" />
+    <Content Include="images\cracks\cracks-02%402x.jpg" />
+    <Content Include="images\cracks\cracks-02.jpg" />
+    <Content Include="images\cracks\cracks-03%402x.jpg" />
+    <Content Include="images\cracks\cracks-03.jpg" />
+    <Content Include="images\cracks\cracks-04%402x.jpg" />
+    <Content Include="images\cracks\cracks-04.jpg" />
+    <Content Include="images\cracks\cracks-05%402x.jpg" />
+    <Content Include="images\cracks\cracks-05.jpg" />
+    <Content Include="images\cracks\cracks-06%402x.jpg" />
+    <Content Include="images\cracks\cracks-06.jpg" />
+    <Content Include="images\cracks\cracks-07%402x.jpg" />
+    <Content Include="images\cracks\cracks-07.jpg" />
+    <Content Include="images\cracks\cracks-09%402x.jpg" />
+    <Content Include="images\cracks\cracks-09.jpg" />
+    <Content Include="images\cracks\cracks-10%402x.jpg" />
+    <Content Include="images\cracks\cracks-10.jpg" />
+    <Content Include="images\cracks\cracks-11%402x.jpg" />
+    <Content Include="images\cracks\cracks-11.jpg" />
+    <Content Include="images\cracks\cracks-12%402x.jpg" />
+    <Content Include="images\cracks\cracks-12.jpg" />
+    <Content Include="images\cracks\cracks-13%402x.jpg" />
+    <Content Include="images\cracks\cracks-13.jpg" />
+    <Content Include="images\cracks\cracks-14%402x.jpg" />
+    <Content Include="images\cracks\cracks-14.jpg" />
+    <Content Include="images\cracks\cracks-15%402x.jpg" />
+    <Content Include="images\cracks\cracks-15.jpg" />
+    <Content Include="images\cracks\cracks-16%402x.jpg" />
+    <Content Include="images\cracks\cracks-16.jpg" />
+    <Content Include="images\cracks\cracks-17%402x.jpg" />
+    <Content Include="images\cracks\cracks-17.jpg" />
+    <Content Include="images\cracks\cracks-18%402x.jpg" />
+    <Content Include="images\cracks\cracks-18.jpg" />
     <Content Include="images\crack\crack-01%402x.jpg" />
     <Content Include="images\crack\crack-01.jpg" />
     <Content Include="images\crack\crack-02%402x.jpg" />
@@ -333,6 +367,22 @@
     <Content Include="images\motherload\motherload-05.jpg" />
     <Content Include="images\newwork\pump%402x.jpg" />
     <Content Include="images\newwork\pump.jpg" />
+    <Content Include="images\occupy\occupancy-01%402x.jpg" />
+    <Content Include="images\occupy\occupancy-01.jpg" />
+    <Content Include="images\occupy\occupancy-02%402x.jpg" />
+    <Content Include="images\occupy\occupancy-02.jpg" />
+    <Content Include="images\occupy\occupancy-03%402x.jpg" />
+    <Content Include="images\occupy\occupancy-03.jpg" />
+    <Content Include="images\occupy\occupancy-04%402x.jpg" />
+    <Content Include="images\occupy\occupancy-04.jpg" />
+    <Content Include="images\occupy\occupancy-05%402x.jpg" />
+    <Content Include="images\occupy\occupancy-05.jpg" />
+    <Content Include="images\occupy\occupancy-06%402x.jpg" />
+    <Content Include="images\occupy\occupancy-06.jpg" />
+    <Content Include="images\occupy\occupancy-07%402x.jpg" />
+    <Content Include="images\occupy\occupancy-07.jpg" />
+    <Content Include="images\occupy\occupancy-08%402x.jpg" />
+    <Content Include="images\occupy\occupancy-08.jpg" />
     <Content Include="images\piercing\piercing-01%402x.jpg" />
     <Content Include="images\piercing\piercing-01.jpg" />
     <Content Include="images\piercing\piercing-02%402x.jpg" />
@@ -531,6 +581,7 @@
     <Content Include="Views\Home\BoilingOver.cshtml" />
     <Content Include="Views\Home\Crack.cshtml" />
     <Content Include="Views\Home\RoachStudy.cshtml" />
+    <Content Include="Views\Home\Cracks.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
