added new scibbles

--- a/Sandbox/Sandbox/Sandbox.csproj
+++ b/Sandbox/Sandbox/Sandbox.csproj
@@ -423,6 +423,18 @@
     <Content Include="images\scribbles\scrib-02.jpg" />
     <Content Include="images\scribbles\scrib-03%402x.jpg" />
     <Content Include="images\scribbles\scrib-03.jpg" />
+    <Content Include="images\scribbles\scrib-04%402x.jpg" />
+    <Content Include="images\scribbles\scrib-04.jpg" />
+    <Content Include="images\scribbles\scrib-05%402x.jpg" />
+    <Content Include="images\scribbles\scrib-05.jpg" />
+    <Content Include="images\scribbles\scrib-06%402x.jpg" />
+    <Content Include="images\scribbles\scrib-06.jpg" />
+    <Content Include="images\scribbles\scrib-07%402x.jpg" />
+    <Content Include="images\scribbles\scrib-07.jpg" />
+    <Content Include="images\scribbles\scrib-08%402x.jpg" />
+    <Content Include="images\scribbles\scrib-08.jpg" />
+    <Content Include="images\scribbles\scrib-09%402x.jpg" />
+    <Content Include="images\scribbles\scrib-09.jpg" />
     <Content Include="images\side-logo%402x.png" />
     <Content Include="images\side-logo.png" />
     <Content Include="images\social\01%402x.png" />
