--- a/Sandbox/Sandbox/Sandbox.csproj
+++ b/Sandbox/Sandbox/Sandbox.csproj
@@ -255,7 +255,6 @@
     <Content Include="favicon.ico" />
     <Content Include="featured-scribble.html" />
     <Content Include="featured-single.html" />
-    <Content Include="fonts\fonts.css" />
     <Content Include="Global.asax" />
     <Content Include="bootstrap\css\bootstrap-theme.css.map" />
     <Content Include="bootstrap\css\bootstrap.css.map" />
@@ -342,6 +341,14 @@
     <Content Include="images\drag.png" />
     <Content Include="images\favicon\favicon.ico" />
     <Content Include="images\favicon\favicon.png" />
+    <Content Include="images\icons\1%402x.png" />
+    <Content Include="images\icons\1.png" />
+    <Content Include="images\icons\2%402x.png" />
+    <Content Include="images\icons\2.png" />
+    <Content Include="images\icons\3%402x.png" />
+    <Content Include="images\icons\3.png" />
+    <Content Include="images\icons\4%402x.png" />
+    <Content Include="images\icons\4.png" />
     <Content Include="images\kidsrings\kring-01%402x.jpg" />
     <Content Include="images\kidsrings\kring-01.jpg" />
     <Content Include="images\kidsrings\kring-02%402x.jpg" />
@@ -584,16 +591,10 @@
     </Content>
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_InternalPageLayout.cshtml" />
-    <Content Include="Views\Home\NewWork.cshtml" />
     <Content Include="Views\Home\PiercingPieces.cshtml" />
     <Content Include="Views\Home\KidsRings.cshtml" />
     <Content Include="Views\Home\ResinBalls.cshtml" />
-    <Content Include="Views\Home\Brood.cshtml" />
-    <Content Include="Views\Home\Bulge.cshtml" />
     <Content Include="Views\Home\Bump.cshtml" />
-    <Content Include="Views\Home\BoilingOver.cshtml" />
-    <Content Include="Views\Home\Crack.cshtml" />
-    <Content Include="Views\Home\RoachStudy.cshtml" />
     <Content Include="Views\Home\Shifting.cshtml" />
     <Content Include="Views\Home\Occupancy.cshtml" />
   </ItemGroup>
