--- a/Sandbox/Sandbox/Sandbox.csproj
+++ b/Sandbox/Sandbox/Sandbox.csproj
@@ -382,6 +382,14 @@
     <Content Include="images\logo%402x.png" />
     <Content Include="images\logo.png" />
     <Content Include="images\logo.svg" />
+    <Content Include="images\merger\merger-01%402x.jpg" />
+    <Content Include="images\merger\merger-01.jpg" />
+    <Content Include="images\merger\merger-02%402x.jpg" />
+    <Content Include="images\merger\merger-02.jpg" />
+    <Content Include="images\merger\merger-03%402x.jpg" />
+    <Content Include="images\merger\merger-03.jpg" />
+    <Content Include="images\merger\merger-04%402x.jpg" />
+    <Content Include="images\merger\merger-04.jpg" />
     <Content Include="images\motherload\motherload-01%402x.jpg" />
     <Content Include="images\motherload\motherload-01.jpg" />
     <Content Include="images\motherload\motherload-02%402x.jpg" />
@@ -392,6 +400,8 @@
     <Content Include="images\motherload\motherload-04.jpg" />
     <Content Include="images\motherload\motherload-05%402x.jpg" />
     <Content Include="images\motherload\motherload-05.jpg" />
+    <Content Include="images\motherload\motherload-logo%402x.jpg" />
+    <Content Include="images\motherload\motherload-logo.jpg" />
     <Content Include="images\newwork\pump%402x.jpg" />
     <Content Include="images\newwork\pump.jpg" />
     <Content Include="images\occupy\occupancy-01%402x.jpg" />
@@ -420,6 +430,14 @@
     <Content Include="images\combat\apt710-04.jpg" />
     <Content Include="images\combat\apt710-05%402x.jpg" />
     <Content Include="images\combat\apt710-05.jpg" />
+    <Content Include="images\petite\petite-01%402x.jpg" />
+    <Content Include="images\petite\petite-01.jpg" />
+    <Content Include="images\petite\petite-02%402x.jpg" />
+    <Content Include="images\petite\petite-02.jpg" />
+    <Content Include="images\petite\petite-03%402x.jpg" />
+    <Content Include="images\petite\petite-03.jpg" />
+    <Content Include="images\petite\petite-04%402x.jpg" />
+    <Content Include="images\petite\petite-04.jpg" />
     <Content Include="images\piercing\piercing-01%402x.jpg" />
     <Content Include="images\piercing\piercing-01.jpg" />
     <Content Include="images\piercing\piercing-02%402x.jpg" />
@@ -476,6 +494,19 @@
     <Content Include="images\side-logo.png" />
     <Content Include="images\social\01%402x.png" />
     <Content Include="images\social\01.png" />
+    <Content Include="images\trestle\trestle-01%402x.jpg" />
+    <Content Include="images\trestle\trestle-01.jpg" />
+    <Content Include="images\trestle\trestle-02%402x.jpg" />
+    <Content Include="images\trestle\trestle-02.jpg" />
+    <Content Include="images\trestle\trestle-03%402x.jpg" />
+    <Content Include="images\trestle\trestle-03.jpg" />
+    <Content Include="images\trestle\trestle-04%402x.jpg" />
+    <Content Include="images\trestle\trestle-04.jpg" />
+    <Content Include="images\trestle\trestle-05%402x.jpg" />
+    <Content Include="images\trestle\trestle-05.jpg" />
+    <Content Include="images\trestle\trestle-06%402x.jpg" />
+    <Content Include="images\trestle\trestle-06.jpg" />
+    <Content Include="images\trestle\trestle_bzcrd30front.png" />
     <Content Include="images\venobox\close.gif" />
     <Content Include="images\venobox\next.gif" />
     <Content Include="images\venobox\preload-circle.png" />
@@ -638,6 +669,10 @@
     <Content Include="Views\Home\Occupancy.cshtml" />
     <Content Include="Views\Home\Combat.cshtml" />
     <Content Include="Views\Home\Phenomenon.cshtml" />
+    <Content Include="Views\Home\Wannabe.cshtml" />
+    <Content Include="Views\Home\PetiteShow.cshtml" />
+    <Content Include="Views\Home\TheMerger.cshtml" />
+    <Content Include="Views\Home\TrestleDesigns.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
