contact page red dot

--- a/Sandbox/Sandbox/Sandbox.csproj
+++ b/Sandbox/Sandbox/Sandbox.csproj
@@ -472,6 +472,12 @@
     <Content Include="images\resinballs\resinballs-06.jpg" />
     <Content Include="images\resinballs\resinballs-07%402x.jpg" />
     <Content Include="images\resinballs\resinballs-07.jpg" />
+    <Content Include="images\resinballs\resinballs-08%402x.jpg" />
+    <Content Include="images\resinballs\resinballs-08.jpg" />
+    <Content Include="images\resinballs\resinballs-09%402x.jpg" />
+    <Content Include="images\resinballs\resinballs-09.jpg" />
+    <Content Include="images\resinballs\resinballs-10%402x.jpg" />
+    <Content Include="images\resinballs\resinballs-10.jpg" />
     <Content Include="images\roachstudy\roach-01%402x.jpg" />
     <Content Include="images\roachstudy\roach-01.jpg" />
     <Content Include="images\roachstudy\roach-02%402x.jpg" />
