--- a/Sandbox/Sandbox/Sandbox.csproj
+++ b/Sandbox/Sandbox/Sandbox.csproj
@@ -259,6 +259,7 @@
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="favicon.ico" />
+    <Content Include="favicon.png" />
     <Content Include="featured-scribble.html" />
     <Content Include="featured-single.html" />
     <Content Include="Global.asax" />
@@ -364,8 +365,11 @@
     <Content Include="images\crack\crack-03.jpg" />
     <Content Include="images\drag%402x.png" />
     <Content Include="images\drag.png" />
-    <Content Include="images\favicon\favicon.ico" />
     <Content Include="images\favicon\favicon.png" />
+    <Content Include="images\touchicon\apple-touch-icon-114-precomposed.png" />
+    <Content Include="images\touchicon\apple-touch-icon-144-precomposed.png" />
+    <Content Include="images\touchicon\apple-touch-icon-57-precomposed.png" />
+    <Content Include="images\touchicon\apple-touch-icon-72-precomposed.png" />
     <Content Include="images\icons\1%402x.png" />
     <Content Include="images\icons\1.png" />
     <Content Include="images\icons\2%402x.png" />
@@ -384,6 +388,14 @@
     <Content Include="images\kidsrings\kring-04.jpg" />
     <Content Include="images\kidsrings\kring-05%402x.jpg" />
     <Content Include="images\kidsrings\kring-05.jpg" />
+    <Content Include="images\links\links-01%402x.jpg" />
+    <Content Include="images\links\links-01.jpg" />
+    <Content Include="images\links\links-02%402x.jpg" />
+    <Content Include="images\links\links-02.jpg" />
+    <Content Include="images\links\links-03%402x.jpg" />
+    <Content Include="images\links\links-03.jpg" />
+    <Content Include="images\links\links-04%402x.jpg" />
+    <Content Include="images\links\links-04.jpg" />
     <Content Include="images\loader.gif" />
     <Content Include="images\logo%402x.png" />
     <Content Include="images\logo.png" />
@@ -596,10 +608,6 @@
     <Content Include="Mail\smtp.php" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include=".bin\node.cmd" />
-    <Content Include=".bin\git.cmd" />
-    <Content Include=".bin\bower.cmd" />
-    <Content Include=".bin\npm.cmd" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
