--- a/Sandbox/Sandbox/packages.config
+++ b/Sandbox/Sandbox/packages.config
@@ -37,6 +37,7 @@
   <package id="Node.js" version="0.10.28" targetFramework="net45" />
   <package id="NoGit" version="0.0.8" targetFramework="net45" />
   <package id="Npm" version="1.4.15.2" targetFramework="net45" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
