--- a/Sandbox/Sandbox/Web.config
+++ b/Sandbox/Sandbox/Web.config
@@ -17,6 +17,13 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+    
+    <add key="MAILGUN_DOMAIN" value="app1013f3ce624748098629d62c61f4c53e.mailgun.org" />
+
+    <add key="MAILGUN_API_KEY" value="" />
+
+    
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
