--- a/.gitignore
+++ b/.gitignore
@@ -269,3 +269,5 @@ Sandbox/Sandbox/obj/Debug/Sandbox.dll
 *.pdb
 Sandbox/Sandbox/bin/Sandbox.dll
 *.pdb
+Sandbox/Sandbox/obj/Debug/Sandbox.dll
+Sandbox/Sandbox.v12.suo
